# task-manager

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/db/: mod.rs  sqlite.rs
backend/src/handlers/: auth.rs  mod.rs  tasks.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  task.rs  user.rs
backend/src/utils/: jwt.rs  mod.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  tasks.ts
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/tasks/: FilterBar.tsx  KanbanBoard.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  Loading.tsx  Modal.tsx
frontend/src/store/: useStore.ts
frontend/src/types/: index.ts
